--- a/portfolio.html
+++ b/portfolio.html
@@ -94,8 +94,8 @@
     </div>
 
     <div class="mb-3">
-        <label for="exampleDropdownFormMessage" class="form-label">Message</label>
-        <input type="text" class="form-control" id="exampleDropdownFormMessage" placeholder="Votre Message">
+      <label for="exampleDropdownFormMessage" class="form-label">Message</label>
+      <textarea name="message" class="form-control" id="exampleDropdownFormMessage" placeholder="Votre Message"></textarea>
     </div>
     
     <button type="submit" class="btn btn-primary">Envoye</button>
