--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@
     </div>
 
 <!-- Mes Projets -->
-<div class="container mt-4">
+<div class="container mt-4" style="margin-bottom: 25px;">
     <h2 class="text-center">Mes Projets</h2>
         <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col">
